# ChangeLog for sci-chemistry/gromacs
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-chemistry/gromacs/ChangeLog,v 1.109 2012/10/14 18:57:51 jlec Exp $

  14 Oct 2012; Justin Lecher <jlec@gentoo.org> gromacs-4.5.5-r1.ebuild:
  Prepare for fortran2.eclass update

  04 May 2012; Jeff Horelick <jdhore@gentoo.org> gromacs-4.5.5-r1.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  09 Mar 2012; Christoph Junghans <ottxor@gentoo.org> -gromacs-4.5.4-r1.ebuild,
  metadata.xml:
  remove old (fixes bug #392121)

  08 Mar 2012; Brent Baude <ranger@gentoo.org> gromacs-4.5.5-r1.ebuild:
  Marking gromacs-4.5.5-r1 ppc64 for bug 391147

  06 Feb 2012; Christoph Junghans <ottxor@gentoo.org> gromacs-4.5.4-r1.ebuild,
  gromacs-4.5.5-r1.ebuild:
  fix bug #402339

  05 Feb 2012; Raúl Porcel <armin76@gentoo.org> gromacs-4.5.4-r1.ebuild,
  gromacs-4.5.5-r1.ebuild:
  Drop alpha/sparc keywords

  06 Jan 2012; Christoph Junghans <ottxor@gentoo.org> -gromacs-4.5.4-r2.ebuild,
  -gromacs-4.5.5.ebuild:
  remove obsolete

  06 Jan 2012; Christoph Junghans <ottxor@gentoo.org> gromacs-4.5.5-r1.ebuild:
  keyword ~x86-macos

  26 Dec 2011; Markus Meier <maekke@gentoo.org> gromacs-4.5.5-r1.ebuild:
  x86 stable, bug #391147

  20 Dec 2011; Agostino Sarubbo <ago@gentoo.org> gromacs-4.5.5-r1.ebuild:
  Stable for AMD64, wrt bug #391147

*gromacs-4.5.5-r1 (19 Dec 2011)

  19 Dec 2011; Christoph Junghans <ottxor@gentoo.org> +gromacs-4.5.5-r1.ebuild,
  +files/gromacs-4.5.5-cmake-cpp-asm.patch,
  +files/gromacs-4.5.5-enable-see.patch:
  bring back sse2 kernels

  14 Dec 2011; Agostino Sarubbo <ago@gentoo.org> gromacs-4.5.5.ebuild:
  Stable for AMD64, wrt bug #391147

  11 Dec 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> gromacs-4.5.5.ebuild:
  x86 stable wrt bug #391147

  28 Sep 2011; Christoph Junghans <ottxor@gentoo.org> gromacs-4.5.5.ebuild:
  cmake variable LIB was renamed to GMXLIB

*gromacs-4.5.5 (27 Sep 2011)
